fix a avatar display bug on firefox

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -121,6 +121,7 @@
   }
   .name-box-wrapper{
     @include info-tab-width-control;
+    width: 100%;
     position: fixed;
   }
   .name-box{
